# home_led_matrix

./: .gitignore  MANIFEST.in  README.md  led-matrix.service  mise.toml  pyproject.toml  requirements.txt  setup.py  start_matrix.sh
home_led_matrix/: config.ini  connection.py  main.py  message_handler.py  socket_conn.py  utils.py
home_led_matrix/apps/: app_handler.py  app_interface.py
home_led_matrix/apps/pixelart_app/: pixelart_app.py
home_led_matrix/apps/snake_app/: snake_app.py  stream_handler.py
home_led_matrix/apps/snake_app/protos/: sim_msgs.proto
home_led_matrix/display/: display_handler.py
